# TPCODL-Outage_scrapper

./: README.md  main.py  pyproject.toml  requirements.txt  sample_data.json
src/: scrapper.ipynb  script.py
