[tool.poetry]
name = "tpcodl-scrapper"
version = "0.1.0"
description = "Scrapper to figure out today's outage in our area"
authors = ["Sanket Mohapatra <sanketmohapatra13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
html5lib = "^1.1"
lxml = "^5.3.0"
ipykernel = "^6.29.5"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
