[project]
name = "tpcodl-scrapper"
version = "0.1.0"
description = "Scrapper to figure out today's outage in our area"
authors = [{ name = "Sanket Mohapatra", email = "sanketmohapatra13@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "requests>=2.32.3,<3",
]

[dependency-groups]
dev = [
    "html5lib~=1.1",
    "lxml>=5.3.0,<6",
    "ipykernel>=6.29.5,<7",
    "autopep8>=2.3.1,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = [
  "src/**"
]
